Fixed spacing beetwen svg and cards

--- a/assets/css/research.css
+++ b/assets/css/research.css
@@ -256,25 +256,25 @@ body {
 
 @media only screen and (max-width: 850px) {
   .researchMainWrapper {
-    margin-top: 150px;
+    margin-top: -150px;
   }
 }
 
 @media only screen and (max-width: 767px) {
   .researchMainWrapper {
-    margin-top: 180px;
+    margin-top: -150px;
   }
 }
 
 @media only screen and (max-width: 624px) {
   .researchMainWrapper {
-    margin-top: 120px;
+    margin-top: -120px;
   }
 }
 
 @media only screen and (max-width: 500px) {
   .researchMainWrapper {
-    margin-top: 85px;
+    margin-top: -200px;
     margin-bottom: 100px;
   }
 }
